--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "antd_back_web",
   "version": "0.1.0",
   "private": true,
+  "homepage":"/admin",
   "dependencies": {
     "@babel/core": "7.9.0",
     "@svgr/webpack": "4.3.3",
